DigicielFull/force-app/main/default/objects/amc__Checklist_Item__c/amc__Checklist_Item__c.object-meta.xml
<CustomObject>
    <description>Enables the ability to track various key items that need to be completed as part of an Action. It will serve as a simple ‘Checklist’ of items that need to be ticked off.</description>
    <label>Checklist Item</label>
    <nameField>
        <label>Checklist Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>