DigicielFull/force-app/main/default/objects/amc__Checklist_Item__c/fields/amc__Action__c.field-meta.xml
<CustomField>
    <fullName>amc__Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the Action record that this Checklist Item relates to</description>
    <inlineHelpText>Links to the Action record that this Checklist Item relates to</inlineHelpText>
    <label>Action</label>
    <referenceTo>amc__Action__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>