DigicielFull/force-app/main/default/objects/amc__Checklist_Item__c/fields/amc__Baseline_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Baseline_Start_Date__c</fullName>
    <inlineHelpText>Tracks the original Start Date for this Checklist Item</inlineHelpText>
    <label>Baseline Start Date</label>
    <type>Date</type>
</CustomField>