DigicielFull/force-app/main/default/objects/amc__Checklist_Item__c/fields/amc__Checklist_Item_Notes_RT__c.field-meta.xml
<CustomField>
    <fullName>amc__Checklist_Item_Notes_RT__c</fullName>
    <inlineHelpText>Detailed Notes about the Checklist Item</inlineHelpText>
    <label>Checklist Item Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>