DigicielFull/force-app/main/default/objects/amc__Checklist_Item__c/fields/amc__Complete_Count__c.field-meta.xml
<CustomField>
    <fullName>amc__Complete_Count__c</fullName>
    <description>Used by trigger to assist in rolling up completed checkboxes</description>
    <formula>if(amc__Complete__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>