DigicielFull/force-app/main/default/objects/amc__Checklist_Item__c/fields/amc__End_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__End_Date__c</fullName>
    <description>Identifies the End Date of the Checklist Item</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>