DigicielFull/force-app/main/default/objects/amc__Checklist_Item__c/fields/amc__Exclude_from_Status_Report_Indicator__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Status_Report_Indicator__c</fullName>
    <formula>If(amc__Action__r.amc__Exclude_from_Status_Report_Indicator__c = TRUE, TRUE, amc__Exclude_from_Status_Report__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies if this Checklist Item should be excluded from the Project Status Report. Will be TRUE if either Checklist Item or parent Action is set to TRUE</inlineHelpText>
    <label>Exclude from Status Report Indicator</label>
    <type>Checkbox</type>
</CustomField>