DigicielFull/force-app/main/default/objects/amc__Checklist_Item__c/fields/amc__Hours_Remaining_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Remaining_Non_Billable__c</fullName>
    <formula>If(amc__Complete__c = TRUE, 0, amc__Hours_Scheduled_Non_Billable__c - amc__Hours_Completed_Non_Billable__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: If Completed = TRUE, then 0, otherwise &apos;Hours Scheduled - Non Billable&apos; - &apos;Hours Completed - Non Billable&apos;</inlineHelpText>
    <label>Hours Remaining - Non Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>