DigicielFull/force-app/main/default/objects/amc__Checklist_Item__c/fields/amc__Hours_Scheduled_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Scheduled_Non_Billable__c</fullName>
    <inlineHelpText>Identifies the non billable hours scheduled to this Checklist Item</inlineHelpText>
    <label>Hours Scheduled - Non Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>