DigicielFull/force-app/main/default/objects/amc__Checklist_Item__c/fields/amc__Item_Owner_Current_User__c.field-meta.xml
<CustomField>
    <fullName>amc__Item_Owner_Current_User__c</fullName>
    <formula>IF(  amc__Item_Owner__r.amc__User__r.Id = $User.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays 1 if the current user is the Item Owner, otherwise displays 0</inlineHelpText>
    <label>Item Owner Current User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>