DigicielFull/force-app/main/default/objects/amc__Checklist_Item__c/fields/amc__Project_Name__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Name__c</fullName>
    <formula>amc__Action__r.amc__Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field: References the Project Name that the Action this Checklist Item relate to is part of</inlineHelpText>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>