DigicielFull/force-app/main/default/objects/amc__Checklist_Item__c/fields/amc__Requirement__c.field-meta.xml
<CustomField>
    <fullName>amc__Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Requirement record this Checklist Item relates to</inlineHelpText>
    <label>Requirement</label>
    <referenceTo>amc__Requirement__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>