DigicielFull/force-app/main/default/objects/amc__Checklist_Item__c/fields/amc__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Start_Date__c</fullName>
    <description>Identifies the Start Date of the Checklist Item</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>