DigicielFull/force-app/main/default/objects/amc__Checklist_Item__c/fields/amc__User_Story__c.field-meta.xml
<CustomField>
    <fullName>amc__User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies which User Story this Checklist Item relates to</inlineHelpText>
    <label>User Story</label>
    <referenceTo>amc__User_Story__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>