DigicielFull/force-app/main/default/objects/amc__Checklist_Item__c/validationRules/amc__End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__End_Date_Validation</fullName>
    <active>true</active>
    <description>The End Date must be greater or equal to the Start Date</description>
    <errorConditionFormula>amc__Start_Date__c &gt; amc__End_Date__c</errorConditionFormula>
    <errorDisplayField>amc__End_Date__c</errorDisplayField>
    <errorMessage>The End Date must be greater or equal to the Start Date</errorMessage>
</ValidationRule>